# effector_c

./: CMakeLists.txt  wave.c  wave.h
.devcontainer/: Dockerfile  devcontainer.json
chapter01/ex1_1/: ex1_1.c  wave.h
chapter01/ex1_2/: ex1_2.c  wave.h
chapter02/ex2_1/: ex2_1.c
